Email property configuration & setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,26 @@ logging.level.org.springframework.web= DEBUG
 
 server.servlet.context-path=/location
 
+#spring.datasource.hikari.connection-timeout= 30000
 #server.error.whitelabel.enabled=false
 
-#server.servlet.context-path= /location
+#Email propertiesk configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port= 587
+spring.mail.username=codeexample7
+spring.mail.password=coderight91
+
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable =true
+spring.mail.properties.mail.smtp.starttls.required = true
+
+#other configurations
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=500000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.jndi-name=mail/Session
+
+#https://www.google.com/settings/security/lesssecureapps
+#codeexample7@gmail.com
+#coderight91
+#outgoing port = ssl => 465 or tsl => 587
